<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general">
        <Preference
            android:key="settings_picture_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_picture_name_sum"
            android:title="@string/settings_picture_name" />
        <Preference
            android:key="settings_picture_id"
            android:selectAllOnFocus="true"
            android:title="@string/settings_picture_id_sum" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_picture_control">
        <Preference
            android:key="settings_picture_resize"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_picture_resize_sum"
            android:title="@string/settings_picture_resize" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_window">
        <Preference
            android:key="settings_picture_position"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_picture_position_sum"
            android:title="@string/settings_picture_position" />
    </PreferenceCategory>
</PreferenceScreen>