<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/menu_group_control"
        tools:ignore="UnusedIds">
        <item
            android:id="@+id/menu_global_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_global_label" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

    <group
        android:id="@+id/menu_group_exit"
        tools:ignore="UnusedIds">
        <item
            android:id="@+id/menu_back_to_launcher"
            android:icon="@drawable/ic_back_to_launcher"
            android:title="@string/back_to_launcher" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit_application" />
    </group>

</menu>