<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.0"
        android:gravity="center"
        android:padding="2dp">

        <ImageView
            android:id="@+id/imageview_notification_application"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imageview_app_icon"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5.0"
        android:gravity="center|start"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:textSize="14sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textview_picture_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_picture_count"
            android:textSize="12sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_weight="1.0"
        android:gravity="center|end"
        android:orientation="horizontal"
        android:padding="2dp">


        <ImageView
            android:id="@+id/imageview_set_picture_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:contentDescription="@string/imageview_notification_visible"
            app:srcCompat="@drawable/ic_invisible" />

    </LinearLayout>

</LinearLayout>